--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -840,6 +840,7 @@
       margin-top: 5rem;
       &:first-child {
         margin-top: 0;
+        height: 60rem;
       }
       &__img {
         padding: 3rem;
